Fixed scrollbar

--- a/app/resources/css/main.css
+++ b/app/resources/css/main.css
@@ -5,7 +5,6 @@ body {
     height: 100% !important;
     margin:0;
     padding:0;
-    overflow: hidden;
 }
 
 .row {
